# package_resource_indexer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: package_resource_indexerConfig.cmake  register_package.cmake  register_package_resource.cmake
test/: utils.py
test/integration/: test_normative_case.py
test/integration/fixtures/normative/pkg1/: CMakeLists.txt  marker.in  rviz_plugin.xml
test/integration/fixtures/normative/pkg2/: CMakeLists.txt
